# qt-vtk

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  version_internal.h.in
data/: test.pcd
src/: common.cpp  common.h  main.cpp  my_interactor_style.cpp  my_interactor_style.h  selected_actor_mgr.cpp  selected_actor_mgr.h  testvtk.cpp  testvtk.h  testvtk.ui  vtkInteractorStyleTrackballCameraEx.cpp  vtkInteractorStyleTrackballCameraEx.h
src/common/: common.cpp
src/core/: lxInteractorStyle.cpp  lxInteractorStyle.h
src/frames/: testvtk.cpp  testvtk.h  testvtk.ui
trans/: test-vtk_zh_CN.ts
